--- a/project-build/app/partials/aboutus.html
+++ b/project-build/app/partials/aboutus.html
@@ -113,4 +113,6 @@
                 </div>
             </div>
         </div>
+
+        <script src="lib/common/usegalleriffic.js"></script>
     </section>
