--- a/project-build/app/partials/catalogue.html
+++ b/project-build/app/partials/catalogue.html
@@ -102,4 +102,5 @@
                 </div>
             </div>
         </div>
+        <script src="lib/common/usegalleriffic.js"></script>
     </section>
