有一个取数据的错

--- a/project-build/app/partials/aboutus.html
+++ b/project-build/app/partials/aboutus.html
@@ -1,4 +1,4 @@
-{{message}}
+{{message}}<button ng-click="myclick()">click</button>
 <!-- content -->
     <section id="content">
         <div class="bg-top">
